force-app/main/default/objects/Payment_Detail__c/Payment_Detail__c.object-meta.xml
<CustomObject>
    <label>Payment Detail</label>
    <nameField>
        <displayFormat>PYM-{000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>