force-app/main/default/objects/Payment_Detail__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant</label>
    <referenceTo>Tenant_Info__c</referenceTo>
    <relationshipLabel>Payment Detail</relationshipLabel>
    <relationshipName>Payment_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>