force-app/main/default/objects/Payment_Detail__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Payment Detail</relationshipLabel>
    <relationshipName>Payment_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>